--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
       <button id="nextStepBtn">Next Step</button>
     </div>
 
-    <a-scene mindar-image="imageTargetSrc: assets/target.mind; autoStart: true; uiScanning: true; uiLoading: true" 
+    <a-scene mindar-image="imageTargetSrc: target.mind; autoStart: true; uiScanning: true; uiLoading: true" 
              embedded color-space="sRGB" 
              renderer="colorManagement: true, physicallyCorrectLights" 
              vr-mode-ui="enabled: false" 
              device-orientation-permission-ui="enabled: true">
 
       <a-assets>
-        <a-asset-item id="heartModel" src="assets/heart.glb"></a-asset-item>
+        <a-asset-item id="heartModel" src="heart.glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
