--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- 3D model viewer with AR functionality -->
     <model-viewer 
-      src="your-3d-model.glb" 
+      src="heart.glb" 
       alt="A 3D model of an organ or scalpel" 
       ar 
       ar-modes="webxr scene-viewer quick-look"
